# just-db

./: ;  Cargo.toml  DEVNOTES.md  README.md  TODO.md  agenda.md  output.txt
.bkp/: Cargo.toml  DEVNOTES.md  TODO.md  agenda.md
.bkp/src/cli/: component.rs  mod.rs
.bkp/src/optimizer/: mod.rs
.bkp/src/parser/: mod.rs
.bkp/src/parser/lexer/: mod.rs
.github/workflows/: test.yaml
db/: Cargo.toml
db/src/: lib.rs
db/src/analyzer/: analyzer.rs  mod.rs  tree.rs
db/src/catalog/: catalog.rs  mod.rs  types.rs
db/src/embedded/: mod.rs
db/src/optimizer/: mod.rs  optimizer.rs  types.rs
db/src/parser/: errors.rs  mod.rs  parser.rs  tree.rs
db/src/parser/lexer/: errors.rs  lexer.rs  mod.rs  tokens.rs
db/src/types/: mod.rs
db/tests/: integration_tests.rs
src/: main.rs
src/analyzer/: mod.rs
src/catalog/: mod.rs
src/cli/: table_component.rs
src/optimizer/: mod.rs
src/parser/: mod.rs
src/parser/lexer/: mod.rs  tokens.rs
tui/: Cargo.toml  LICENSE  README.md
tui/.config/: config.json5
tui/src/: action.rs  app.rs  components.rs  config.rs  layout.rs  main.rs
tui/src/components/: editor.rs  fps.rs  help_popup.rs  home.rs  status_bar.rs  table.rs
