[workspace]

members = [
    "tui",
    #"db"
]


[package]
name = "just-db"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
fakeit = "1.3.0"
itertools = "0.13.0"
pretty_assertions = "1.4.1"
ratatui = "0.29.0"
tui-textarea = "0.7.0"
unicode-width = "0.2.0"

[dev-dependencies]
rstest = "0.9.0"
