[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
miette = { version = "7.5.0", features = ["fancy"] }
serde = { version = "1.0.211", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.12"

[dev-dependencies]
fakeit = "1.3.0"
itertools = "0.13.0"
pretty_assertions = "1.4.1"
rstest = "0.9.0"
